--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "ng-zorro-antd": "^17.4.1",
     "rxjs": "~7.8.0",
     "tailwind": "^4.0.0",
